# python-monorepo-template

./: .gitignore  .pre-commit-config.yaml  Taskfile.yml  pyproject.toml  pyrightconfig.json
